@@ -2,7 +2,7 @@
 # Kernel/Config/Defaults.pm - Default Config file for OTRS kernel
 # Copyright (C) 2001-2003 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: Defaults.pm,v 1.89 2003-11-26 00:58:08 martin Exp $
+# $Id: Defaults.pm,v 1.90 2003-12-03 16:50:33 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see 
 # the enclosed file COPYING for license information (GPL). If you 
@@ -20,7 +20,7 @@ package Kernel::Config::Defaults;
 
 use strict;
 use vars qw(@ISA $VERSION);
-$VERSION = '$Revision: 1.89 $';
+$VERSION = '$Revision: 1.90 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 # --
@@ -94,6 +94,10 @@ sub LoadDefaults {
     # QueueViewAllPossibleTickets
     # (show all ro and rw queues - not just rw queues)
     $Self->{QueueViewAllPossibleTickets} = 0; 
+
+    # QueueListType
+    # (show queues in system as tree or as list) [tree|list]
+    $Self->{QueueListType} = 'tree';
 
     # MoveType
     # (Show form drop down of show new page of new queues) [form|link]
@@ -1683,17 +1687,17 @@ Your OTRS Notification Master
     # PhoneViewSelectionType 
     # (To: seection type. Queue => show all queues, SystemAddress => show all system 
     # addresses;) [Queue|SystemAddress]
-#    $Self->{PhoneViewSelectionType} = 'Queue';
-    $Self->{PhoneViewSelectionType} = 'SystemAddress';
+    $Self->{PhoneViewSelectionType} = 'Queue';
+#    $Self->{PhoneViewSelectionType} = 'SystemAddress';
 
     # PhoneViewSelectionString
     # (String for To: selection.) 
     # use this for PhoneViewSelectionType = Queue
 #   $Self->{PhoneViewSelectionString} = 'Queue: <Queue> - <QueueComment>';
-#   $Self->{PhoneViewSelectionString} = '<Queue>';
+   $Self->{PhoneViewSelectionString} = '<Queue>';
     # use this for PhoneViewSelectionType = SystemAddress
 #    $Self->{PhoneViewSelectionString} = '<Realname> <<Email>> - Queue: <Queue> - <QueueComment>';
-    $Self->{PhoneViewSelectionString} = '<Realname> <<Email>> - Queue: <Queue>';
+#    $Self->{PhoneViewSelectionString} = '<Realname> <<Email>> - Queue: <Queue>';
 
     # PhoneViewOwnSelection
     # (If this is in use, "just this selection is valid" for the PhoneView.)
